<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ligne1"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/EditText_Contacts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_weight="30"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/str_Hint_Contact"
                    android:longClickable="false"
                    android:scrollbars="none"
                    android:textColor="@color/text"
                    android:textColorHint="@color/text" >

                </EditText>

                <ImageButton
                    android:id="@+id/button_Contact"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="90"
                    android:background="@drawable/button_contact"
                    android:contentDescription="@string/str_Content_Description_btn_Contact" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ligne2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ligne1"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ligne2colonne1"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="30"
                    android:gravity="bottom"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/EditText_Message"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        
                        android:hint="@string/str_Hint_Message"
                        android:textColor="@color/text"
                        android:textColorHint="@color/text" >

                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ligne2colonne2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="90"
                    android:gravity="bottom"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/ligne2colonne2ligne1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:orientation="horizontal"
                        android:textAlignment="center" >

                        <TextView
                            android:id="@+id/tevNbCaract"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:hint="@string/str_Hint_Cnt_Caract"
                            android:textColor="@color/text"
                            android:textColorHint="@color/text"
                            android:textIsSelectable="false"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ligne2colonne2ligne2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tevNbSMS"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:hint="@string/str_Hint_Cnt_SMS"
                            android:textColor="@color/text"
                            android:textColorHint="@color/text"
                            android:textIsSelectable="false"
                            android:textSize="12sp" >

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ligne2colonne2ligne3"
                        android:layout_width="fill_parent"
                        android:layout_height="80dp"
                        android:layout_weight="33"
                        android:orientation="horizontal" >

                        <ImageButton
                            android:id="@+id/button_Envoyer"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/button_send"
                            android:contentDescription="@string/str_Content_Description_btn_Send" >

                        </ImageButton>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ligne3"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/ligne2"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:textColor="@color/text" >

                <Button
                    android:id="@+id/button_BDF_Nom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="50"
                    android:background="@drawable/button_concave_convexe"
                    android:text="@string/str_Btn_Last_Name"
                    android:textColor="@color/text" >
                </Button>

                <Button
                    android:id="@+id/button_BDF_Prenom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="50"
                    android:background="@drawable/button_concave_convexe"
                    android:text="@string/str_Btn_First_Name"
                    android:textColor="@color/text" >
                </Button>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>